# dnssec-toy

./: .gitignore  README.md  benchmark_results.json  overview.tex  proof_artifact.json  pyproject.toml  trust_anchor.json
circom/: transcript_commitment.circom
pcdnssec/: __init__.py  artifact.py  benchmark.py  circom.py  cli.py  models.py  resolver.py  serialization.py  snarkjs.py  trust_anchor.py  verifier.py
