[project]
name = "pcdnssec"
version = "0.1.0"
description = "Toy prototype for proof-carrying DNSSEC validation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "dnspython>=2.8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pcdnssec*"]
